<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Enable Printing</string>
    <string name="action_print">Print</string>
    <string name="install_now">Install Now</string>
    <string name="i_can_print">My app content</string>
    <string name="promo_text">Promo</string>
    <string name="business_text">Business</string>
    <string name="maps_text">Maps</string>
    <string name="image">image</string>

</resources>
