<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/i_can_print" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio_promo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/promo_text" />

        <RadioButton
            android:id="@+id/radio_business"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/business_text" />

        <RadioButton
            android:id="@+id/radio_maps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maps_text" />
    </RadioGroup>

    <ImageView
        android:id="@+id/imageView1"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:contentDescription="@string/image"
        android:src="@drawable/promo" />

</LinearLayout>